terraform/modules/application/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.instance_config.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = var.instance_config.app_name
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.instance_config.app_name}-igw"
  }
}

data "aws_region" "current" {}

resource "aws_subnet" "public_subnets" {
  for_each                = local.vpc.public_subnets
  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value.cidr_block
  map_public_ip_on_launch = true
  availability_zone       = each.value.availability_zone

  tags = {
    Name = each.value.name
  }
}

resource "aws_subnet" "private_subnets" {
  for_each          = local.vpc.private_subnets
  vpc_id            = aws_vpc.main.id
  cidr_block        = each.value.cidr_block
  availability_zone = each.value.availability_zone

  tags = {
    Name = each.value.name
  }
}

resource "aws_route_table" "public_rtb" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.instance_config.app_name}-public-route-table"
  }
}

resource "aws_route" "route_to_internet" {
  route_table_id            = aws_route_table.public_rtb.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public" {
  for_each       = aws_subnet.public_subnets
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public_rtb.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_subnets["subnet1"].id

  tags = {
    Name = "${var.instance_config.app_name}-nat-gateway"
  }
}

resource "aws_route_table" "private_rtb" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.instance_config.app_name}-private-route-table"
  }
}

resource "aws_route" "route_to_pub" {
  route_table_id            = aws_route_table.private_rtb.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "private" {
  for_each       = aws_subnet.private_subnets
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public_rtb.id
}
